# file

./: .gitignore  .lintstagedrc.json  CHANGELOG.md  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json  tsdown.config.ts  tsup.config.ts
.changeset/: SMOODEV-951-create-from-webfile.md  SMOODEV-952-python-lazy-streaming.md  SMOODEV-953-dotnet-content-disposition.md  SMOODEV-954-go-presigned-upload.md  SMOODEV-955-toformdata-ports.md  SMOODEV-967-lazy-streaming.md  add-language-readmes.md  beige-pants-tap.md  bump-logger-fetch-utils.md  dark-ducks-live.md  deep-rings-mate.md  dotnet-port.md  drop-create-entry-points.md  eight-pots-love.md  floppy-news-hear.md  funny-things-say.md  migrate-to-tsdown.md  multi-language-parity.md  puny-ravens-peel.md  smoodev-662-dotnet-version-sync.md  smoodev-664-readme-value-frame.md  smoodev-666-multi-target.md  smoodev-667-publish-pipeline.md  smoodev-956-readme-puremagic.md  smoofile-helpers.md  tame-animals-grab.md  tame-nails-know.md  update-readme.md
.claude/: settings.json
.claude/hooks/: enforce-worktree.sh
.github/workflows/: pr-checks.yml  release.yml
.smooai-logs/: output.ansi
dotnet/: Directory.Build.props  SmooAI.File.sln
dotnet/src/SmooAI.File/: AssemblyInfo.cs  ContentDisposition.cs  Errors.cs  ExtensionMimeMap.cs  FileMetadata.cs  MimeDetector.cs  README.md  SmooAI.File.csproj  SmooFile.cs
dotnet/src/SmooAI.File.S3/: README.md  S3SmooFile.cs  SmooAI.File.S3.csproj
dotnet/tests/SmooAI.File.S3.Tests/: S3SmooFileTests.cs  SmooAI.File.S3.Tests.csproj
dotnet/tests/SmooAI.File.Tests/: ContentDispositionTests.cs  CreateFromFormFileTests.cs  LazyStreamTests.cs  MimeDetectorTests.cs  SmooAI.File.Tests.csproj  SmooFileTests.cs  TestBytes.cs  ToFormDataTests.cs
go/file/: README.md  content_disposition.go  content_disposition_test.go  detection.go  detection_test.go  errors.go  file.go  file_test.go  go.mod  go.sum  helpers_test.go  integration_test.go  lazy_stream_test.go  metadata.go  source.go  version.go
python/: README.md  pyproject.toml
python/src/smooai_file/: __init__.py  _content_disposition.py  _detection.py  _errors.py  _file.py  _metadata.py  _source.py
python/tests/: conftest.py  test_basic.py  test_detection.py  test_file.py  test_helpers.py  test_integration.py  test_lazy_streaming.py  test_s3.py
rust/file/: Cargo.toml  README.md
rust/file/src/: content_disposition.rs  detection.rs  error.rs  file.rs  lib.rs  metadata.rs  source.rs
rust/file/tests/: detection_tests.rs  file_tests.rs  integration_tests.rs  lazy_stream_tests.rs
scripts/: sync-versions.mjs
src/: File.integration.spec.ts  File.spec.ts  File.ts  errors.ts  helpers.spec.ts  index.ts
src/test/: example.docx
