[project]
name = "smooai-file"
version = "1.1.5"
description = "A unified file handling library for working with files from local filesystem, S3, URLs, and streams."
readme = "README.md"
authors = [{ name = "SmooAI", email = "brent@smooai.com" }]
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = ["httpx>=0.27.0", "boto3>=1.35.0"]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
keywords = ["file", "s3", "streaming", "smooai"]

[project.urls]
Homepage = "https://github.com/SmooAI/file"
Repository = "https://github.com/SmooAI/file"
Issues = "https://github.com/SmooAI/file/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/smooai_file"]

[dependency-groups]
dev = ["pytest>=8.0.0", "ruff>=0.11.0", "basedpyright>=1.0.0", "poethepoet>=0.29.0"]

[tool.poe.tasks]
lint = "ruff check src/ tests/"
"lint:fix" = "ruff check --fix src/ tests/"
format = "ruff format src/ tests/"
"format:check" = "ruff format --check src/ tests/"
typecheck = "basedpyright src/"
test = "uv run pytest tests/ -v"
build = "uv build --wheel --sdist"
"install-dev" = "uv sync --group dev"

[tool.poe.tasks.publish]
sequence = [
  { cmd = "uv build --wheel --sdist" },
  { cmd = "uv publish" },
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.basedpyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
