[package]
name = "smooai-file"
version = "1.1.5"
edition = "2021"
description = "A unified file handling library for working with files from local filesystem, S3, URLs, and streams."
license = "MIT"
repository = "https://github.com/SmooAI/file"
homepage = "https://github.com/SmooAI/file"
keywords = ["file", "s3", "streaming", "smooai"]
categories = ["filesystem"]
readme = "README.md"

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
bytes = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
infer = "0.16"
mime_guess = "2"
sha2 = "0.10"
hex = "0.4"
aws-sdk-s3 = "1"
aws-config = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
futures = "0.3"
tracing = "0.1"
url = "2"

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros", "rt-multi-thread"] }
tempfile = "3"
wiremock = "0.6"
